--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
 
-            fetch("https://sep490-manga-mystery-box-pybe.onrender.com/api/user/auth/login", {
+            fetch("https://api.mmb.io.vn/py/api/user/auth/login", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/x-www-form-urlencoded"
