--- a/chatroom-list.html
+++ b/chatroom-list.html
@@ -37,7 +37,7 @@
     <script>
         const token = localStorage.getItem("access_token");
 
-        fetch("https://sep490-manga-mystery-box-pybe.onrender.com/api/chatbox/conversation/me", {
+        fetch("https://api.mmb.io.vn/py/api/chatbox/conversation/me", {
             headers: {
                 "accept": "application/json",
                 "Authorization": "Bearer " + token
